# asciidoctor-confluence-adf

./: .gitignore  Gemfile  LICENSE  README.md  Rakefile  validate.sh
.github/workflows/: main.yml
doc/: document-attributes.md  gradle-integration.md
helper_scripts/: README.md  adf_media.py  adf_resources.py  asciidoc_resources.py  confluence_api.py  confluence_client.py  confluence_to_asciidoc.py  pyproject.toml  upload_to_confluence.py
helper_scripts/tests/: test_adf_dimensions.py  test_adf_media.py  test_adf_resources.py  test_asciidoc_resources.py  test_confluence_api.py  test_confluence_client.py  test_confluence_to_asciidoc.py  test_upload_to_confluence.py
src/: adf_builder.rb  adf_converter.rb  adf_extensions.rb  adf_logger.rb  adf_to_asciidoc.rb  appfox_workflows_macro.rb  asciidoc_table_cell_parser.rb  confluence_client.rb  image_handler.rb  inline_anchor_helper.rb  jira_macro.rb  jira_support.rb  text_or_json_parser.rb
test/: adf_converter_table_test.rb  adf_converter_test.rb  adf_to_asciidoc_test.rb  appfox_workflows_macro_test.rb  atlas_mention_table_test.rb  failure_level_test.rb  image_dimensions_test.rb  imagesdir_switch_test.rb  inline_anchor_helper_test.rb  jira_macro_test.rb  jira_support_test.rb  text_or_json_parser_test.rb
test/fixtures/: logging_extension.rb  simple_doc.adoc  simple_doc.html
